# next-js-with-napi-rs

./: README.md  capacitor.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
app/api/rust-test/: route.ts
rust-lib/: Cargo.toml  README.md  index.js  package-lock.json  package.json
rust-lib/src/: lib.rs
ts-lib/: rust-lib-wrapper.ts
